--- a/assets/style.css
+++ b/assets/style.css
@@ -1,21 +1,25 @@
 header {
     padding: 25px 35px;
-    background-color: white;
+    color: tan;
+    background-color: black;
     text-align: center;
     font-size: 30px;
 
 }
 
-
-body {
-    background-color: white;
-    flex: wrap;
-
-    
+.center {
+display: block;
+margin-left: auto;
+margin-right: auto;
+width: 25%;
 }
 
-Img {
-    text-align: justify;
+
+body {
+    color: black;
+    background-color:tan;
+    flex: wrap;
+
 }
 
 
@@ -42,4 +46,12 @@ h3, h4, H5 {
     font-size: medium;
     font-family: cursive;
 
+}
+
+footer {
+    padding: 25px 35px;
+    color: white;
+    background-color: black;
+    text-align: center;
+    font-size: 20px;
 }
