--- a/assets/style.css
+++ b/assets/style.css
@@ -74,7 +74,8 @@ h1 {
 }
 
 p {
-    text-align: center;
+    display: inline-block;
+    margin: 0 auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     flex-wrap: wrap;
 }
