--- a/assets/style.css
+++ b/assets/style.css
@@ -11,8 +11,8 @@
 
 header {
     padding: 25px 35px;
-    color: tan;
-    background-color: black;
+    color: black;
+    background-color: white;
     text-align: left;
     font-size: 20px;
 
