--- a/assets/style.css
+++ b/assets/style.css
@@ -26,6 +26,7 @@ header nav {
 
 header nav ul li {
     display: inline;
+    text-align: center;
 }
 
 header nav ul li {
@@ -42,12 +43,39 @@ width: 100%;
 }
 
 .projects {
-    color: white;
+    text-align: center;
+    color: rgb(223, 17, 17);
     
 }
 
+.section-title {
+    font-size: 45px;
+    color: black;
+    padding: 20px 100px 100px 20px;
+    display: inline-block;
+    border-bottom: 5px solid;
+}
+/*
+.container {
+    padding: 200px 200px 200px 200px;
+    border-bottom: 100px;
+    font-size: 20px;
+
+    
+}*/
+
+h3 {
+    color: black;
+    text-align: center;
+    font-size: 20px;
+}
+.solo {
+    color: red;
+    text-align: center;
+}
+
 img {
-    border-color: rgb(121, 7, 7);
+    border-color: rgb(243, 6, 6);
     border-width: thin;
 
 }
@@ -61,7 +89,7 @@ div {
 
 body {
     color: black;
-    background-color:tan;
+    background-color: white;
     flex: wrap;
 
 }
@@ -72,33 +100,27 @@ h1 {
     font-size: larger;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-/*
-p {
-    text-align: center;
-    display: inline-block;
-    margin: 0 auto;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    flex-wrap: wrap;
-}
-*/
+
 
 p {
     text-align: center;
     font-size: medium;
     font-family: cursive;
 }
+
 h2 {
     text-align: center;
-    font-size: large;
-    font-family: cursive;
+    color: black;
+    font-size: 45px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-h3, h4, H5 {
+/*h3, h4, H5 {
     text-align: center;
     font-size: medium;
     font-family: cursive;
 
-}
+}*/
 
 footer {
     padding: 25px 35px;
