--- a/assets/style.css
+++ b/assets/style.css
@@ -55,6 +55,20 @@ width: 100%;
     display: inline-block;
     border-bottom: 5px solid;
 }
+
+/*.contact div {
+    background-color: green;
+    padding: 20px;
+    display: none;
+}
+
+span:hover + div {
+    display: block;
+}
+*/
+
+
+
 /*
 .container {
     padding: 200px 200px 200px 200px;
@@ -69,6 +83,7 @@ h3 {
     text-align: center;
     font-size: 20px;
 }
+
 .solo {
     color: red;
     text-align: center;
