--- a/assets/style.css
+++ b/assets/style.css
@@ -56,16 +56,17 @@ width: 100%;
     border-bottom: 5px solid;
 }
 
+
 /*.contact div {
     background-color: green;
     padding: 20px;
     display: none;
 }
 
-span:hover + div {
+span:hover + contact div {
     display: block;
-}
-*/
+}*/
+
 
 
 
@@ -125,9 +126,9 @@ p {
 
 h2 {
     text-align: center;
-    color: black;
+    color: rgba(68, 14, 14, 0.767);
     font-size: 45px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /*h3, h4, H5 {
